# hellrat

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  fs.rs  keyboard.rs  lib.rs  main.rs  mods.rs  window.rs
src/lang/: index.js
src/lang/locales/: en-US.json  zh-CN.json
src/router/: index.js
src/views/: AboutView.vue  AddView.vue  Help.vue  HomeView.vue  HomeView1.vue  ImportView.vue  KeyboardView.vue  MainView.vue  QuicklyChatView.vue  SettingView.vue  TestView.vue  UploadView.vue
src/views/components/: AddEnvironments.vue  Menu.vue  SelectMods.vue  SelectOptions.vue  ShowModInfo.vue  SortableDiglog.vue
