[package]
name = "helldivers2-mods-manager"
version = "1.0.0"
description = "a helldiver2 mods manager app"
authors = ["luckyriko"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helldivers2_mods_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
dirs = "6.0.0"
anyhow = "1.0.95"
rayon = "1.10.0"
tauri-plugin-http = "2"
zip = "4.3.0"
enigo = "0.5.0"
windows = { version = "0.61.3", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
