[package]
name = "HellRat"
version = "2.1.1"
description = "a helldiver2 mods manager app"
authors = ["luckyriko"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hellrat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
dirs = "6.0.0"
anyhow = "1.0.95"
rayon = "1.10.0"
zip = "5.1.1"
enigo = "0.5.0"
once_cell = "1.21.3"
tauri-plugin-store = "2"
unrar = "0.5.8"
sevenz-rust2 = "0.17.1"
mudder = "0.1.5"
winreg = "0.55.0"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
